# 3GPP_DNS_Toolbox

./: .gitignore  MME_DNS_Client.py  README.md  roaming_decider.py
c/: HowTo.md  Makefile  dns_resolvers.c  dns_resolvers.h  main.c  meson.build  naptr.c  naptr.h  regex_extensions.c  regex_extensions.h
c/src/: Makefile  dns_resolvers.c  dns_resolvers.h  main.c  meson.build  naptr.c  naptr.h  regex_extensions.c  regex_extensions.h
